--- a/RunLittleChuckNorris/Properties/Resources.resx
+++ b/RunLittleChuckNorris/Properties/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="GAMEOBJECT_PRIORITY" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="HUD_PRIORITY" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="LEVELMANAGER_PRIORITY" xml:space="preserve">
+    <value>2</value>
+  </data>
   <data name="PLATEFORME_HEIGHT" xml:space="preserve">
     <value>2</value>
   </data>
