--- a/trunk/RunLittleChuckNorris/Properties/Resources.resx
+++ b/trunk/RunLittleChuckNorris/Properties/Resources.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="GAMEOBJECT_DRAW_PRIORITY" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="GAMEOBJECT_PRIORITY" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="HUD_DRAW_PRIORITY" xml:space="preserve">
     <value>1</value>
   </data>
   <data name="HUD_PRIORITY" xml:space="preserve">
