--- a/trunk/RunLittleChuckNorris/Properties/Resources.resx
+++ b/trunk/RunLittleChuckNorris/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BG_SPEED" xml:space="preserve">
+    <value>0,5</value>
+  </data>
   <data name="GAMEOBJECT_DRAW_PRIORITY" xml:space="preserve">
     <value>0</value>
   </data>
